--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  
+
   <!-- Version du modèle Maven utilisé (obligatoire) -->
   <modelVersion>4.0.0</modelVersion>
 
@@ -27,12 +27,14 @@
   <dependencies>
 
     <!-- Bibliothèque de test JUnit (version ancienne ici) -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope> <!-- Utilisée uniquement pour les tests -->
-    </dependency>
+    <!-- JUnit 5 (Jupiter) -->
+<dependency>
+  <groupId>org.junit.jupiter</groupId>
+  <artifactId>junit-jupiter</artifactId>
+  <version>5.10.0</version>
+  <scope>test</scope>
+</dependency>
+
 
     <!-- API Servlet de Jakarta (nécessaire pour utiliser les Servlets) -->
     <dependency>
@@ -43,12 +45,11 @@
     </dependency>
 
     <!-- Pilote JDBC pour SQLite (pour interagir avec une base SQLite) -->
-  <dependency>
-  <groupId>org.xerial</groupId>
-  <artifactId>sqlite-jdbc</artifactId>
-  <version>3.42.0.0</version> <!-- ou autre version que tu utilises -->
-</dependency>
-
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.42.0.0</version> <!-- ou autre version que tu utilises -->
+    </dependency>
 
   </dependencies>
 
@@ -56,21 +57,21 @@
     <!-- Nom final du fichier .war généré dans /target -->
     <finalName>LibraryManager</finalName>
 
-      <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-shade-plugin</artifactId>
-      <version>3.2.4</version>
-      <executions>
-        <execution>
-          <phase>package</phase>
-          <goals>
-            <goal>shade</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
-  </plugins>
-  
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+
   </build>
 </project>
